[package]
name = "sds011"
version = "0.1.0"
authors = ["Chris Ballinger <chrisballinger@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serial = "0.4"

env_logger = "0.6"

[[bin]]
name = "sds011"
path = "src/sds011.rs"
doc = false

[features]
default = ["validation"]
validation = []